# cw6

./: pyproject.toml  requirements.txt
blog/: admin.py  forms.py  models.py  services.py  urls.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
config/: settings.py  urls.py
mailing/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: services.py
mailing/migrations/: 0001_initial.py
mailing/templates/mailing/: base.html  client_confirm_delete.html  client_form.html  client_list.html  home.html  mailing_attempt_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_form.html  message_list.html
mailing/templates/mailing/includes/: inc_main_menu.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: email_reset.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  user_form.html  user_list.html
