[tool.poetry]
name = "cw6"
version = "0.1.0"
description = ""
authors = ["IliaPr <ilya.prianichnikov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
django-scheduler = "^0.10.1"
transliterate = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
